test/compflags/vass/callstack-internal-modules.d-s+.good
callstack-internal-modules.chpl:19: In function 'foo':
callstack-internal-modules.chpl:20: error: illegal use of '+' on operands of type uint(64) and signed integer
  callstack-internal-modules.chpl:16: called as foo() from function 'bar'
  callstack-internal-modules.chpl:12: called as bar() from function 'main'
